# RAG-TwoStage-Chunking-Retrieval

./: README.md  pyproject.toml  requirements.txt
Archive_notebook/: Evaluation.ipynb  Proposition_Light.ipynb  Sentence_Window_Complete.ipynb  Structured-Based Chunking.ipynb
archive/: README.md
archive/notebooks/: Baseline_1.ipynb  Proposition_Sample.ipynb  Sentence_Window_Sample.ipynb
artifacts/evaluations/: eval_2025-04-05_gpt-4o_run_results_baseline.json  eval_2025-04-05_gpt-4o_run_results_baseline_L1.json  eval_2025-04-05_run_results_sw_gpt4o_2025-04-05.json  eval_2025-04-06_run_results_proposition_gpt4o.json
configs/: analysis.yaml  baseline_fixed.yaml  baseline_structure.yaml  build_l1_vectorstore.yaml  evaluate_all.yaml  evaluation.yaml  proposition.yaml  sentence_window.yaml
helpers/: dataset_helpers.py  gold_answer_helper.py
notebooks/: Final_Analysis.ipynb
scripts/: analyze_results.py  build_l1_vectorstore.py  evaluate_all.py  evaluate_run.py  run_baseline_fixed.py  run_baseline_structure.py  run_proposition.py  run_sentence_window.py
src/rag_chunking/: __init__.py  config.py  data_io.py  generation.py  gold_answers.py  loaders.py  prompts.py  results.py  retrieval.py  schemas.py  vectorstores.py
src/rag_chunking/chunking/: __init__.py  fixed_size.py  proposition.py  sentence_window.py  (+1 more)
tests/: test_baseline_fixed.py  test_data_io.py  test_evaluation_analysis.py  test_evaluation_ragas_metrics.py  test_gold_answers.py  test_proposition_pipeline.py  test_sentence_window_pipeline.py  test_shared_rag_utils.py  test_structure_based_chunking.py
(+9 files in other folders)
