[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chunking-optimization"
version = "0.1.0"
description = "RAG chunking experiments comparing fixed-size, structure-based, sentence-window, and proposition chunking."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

